kubernetes/apps/default/sonarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  serviceName: "sonarr"
  selector:
    matchLabels:
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: share
          nfs:
            server: openmediavault.oyoy.lan
            path: /storage
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: share
              mountPath: /share
