kubernetes/apps/default/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
